@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.402 2006/10/03 10:25:55 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.403 2006/10/03 15:11:22 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -90,6 +90,10 @@ PH/14 Corrected misleading output from -bv when -v was also used. Suppose the
       failed to verify" and then showing the successful verification for C,
       with its parentage. It now outputs "B failed to verify", showing B's
       parentage before showing the successful verification of C.
+
+PH/15 Applied Michael Deutschmann's patch to allow DNS black list processing to
+      look up a TXT record in a specific list after matching in a combined
+      list.
 
 
 Exim version 4.63
